# ChangeLog for sec-policy/selinux-jabber-server
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-jabber-server/ChangeLog,v 1.18 2011/06/04 17:13:10 blueness Exp $

  04 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
  -selinux-jabber-server-2.20090730.ebuild,
  -selinux-jabber-server-2.20091215.ebuild,
  -selinux-jabber-server-20080525.ebuild:
  Removed deprecated policies

  02 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
  selinux-jabber-server-2.20101213.ebuild:
  Stable amd64 x86

*selinux-jabber-server-2.20101213 (05 Feb 2011)

  05 Feb 2011; Anthony G. Basile <blueness@gentoo.org>
  +selinux-jabber-server-2.20101213.ebuild:
  New upstream policy.

*selinux-jabber-server-2.20091215 (16 Dec 2009)

  16 Dec 2009; Chris PeBenito <pebenito@gentoo.org>
  +selinux-jabber-server-2.20091215.ebuild:
  New upstream release.

  14 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
  -selinux-jabber-server-20070329.ebuild,
  -selinux-jabber-server-20070928.ebuild,
  selinux-jabber-server-20080525.ebuild:
  Mark 20080525 stable, clear old ebuilds.

*selinux-jabber-server-2.20090730 (03 Aug 2009)

  03 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
  +selinux-jabber-server-2.20090730.ebuild:
  New upstream release.

  18 Jul 2009; Chris PeBenito <pebenito@gentoo.org>
  selinux-jabber-server-20070329.ebuild,
  selinux-jabber-server-20070928.ebuild,
  selinux-jabber-server-20080525.ebuild:
  Drop alpha, mips, ppc, sparc selinux support.

*selinux-jabber-server-20080525 (25 May 2008)

  25 May 2008; Chris PeBenito <pebenito@gentoo.org>
  +selinux-jabber-server-20080525.ebuild:
  New SVN snapshot.

  16 Mar 2008; Chris PeBenito <pebenito@gentoo.org>
  -selinux-jabber-server-20050219.ebuild,
  -selinux-jabber-server-20061114.ebuild:
  Remove old ebuilds.

  03 Feb 2008; Chris PeBenito <pebenito@gentoo.org>
  selinux-jabber-server-20070928.ebuild:
  Mark stable.
