@@ -1,4 +1,3 @@
-DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-jabber-server-2.20110726.ebuild 257 RMD160 a6f4d1155a84ad007f6199fd098946a3228bf04f SHA1 35626145670f1d5ddf2b3d82ed2ca846df6bfb5b SHA256 5786979f1c5651e615d069163b5a803107edf384fd1c0ab692d08708357b9065
-MISC ChangeLog 3157 RMD160 f6e584ad97572a775fc723945e3c3b2541a57d24 SHA1 ed096a2e96b232c5c19bb35a8b187b6e8b235ba3 SHA256 d5de9032779c52c1e81dc5d342127eab6c1d6d84850fe06c258abfac61ff7eb3
+EBUILD selinux-jabber-server-2.20110726.ebuild 362 RMD160 5c748090a69de6745b5e7c95c6d185edbc1fea27 SHA1 2e03e6327a88d635006d26bfe17066017861bd8b SHA256 7d9c022550244d637cb95548306a2518d315ae6b7bd257e56ee42903243cf24c
+MISC ChangeLog 3287 RMD160 e4b48d352fe122d53a1bc306f78ed574bed11b8b SHA1 39d2883aa48ab8fe9e4d28e4791186e2f7ea668e SHA256 26d79a436b192b81b9bab2d1d2464deeb987365642ce8785f6177e56f02e1db5
 MISC metadata.xml 237 RMD160 9779944ae80aafc78e463f101fb4985c00dad984 SHA1 d760505afb50f52c30a5cc183d353a6687879ca3 SHA256 71db487975d08b863a9fd5a78a61f43d1aa05f9bf7840f1aad234cfef446ddac
