@@ -3,11 +3,11 @@
 # $Header: $
 EAPI="4"
 
+DEPEND=">=sec-policy/selinux-jabber-2.20110726"
+
 IUSE=""
-MODS="jabber-server"
-
-inherit selinux-policy-2
-
-DESCRIPTION="SELinux policy for jabber-server"
-
+DESCRIPTION="SELinux policy for Jabber server (meta-package for jabber)"
+HOMEPAGE="http://hardened.gentoo.org/selinux"
 KEYWORDS="~amd64 ~x86"
+SLOT="0"
+LICENSE="public-domain"
