@@ -1,0 +1,4 @@
+DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
+EBUILD selinux-jabber-2.20110726.ebuild 344 RMD160 ddcf1adc19dff3f1fae18c53c1d01bf26807f49d SHA1 42f3a9c9d8de1f518d00de3d1e22fadfa05f352c SHA256 36ba7c632edf305b533708e439a284ac372a7b6f1e018c71a4c30ceb039199ec
+MISC ChangeLog 318 RMD160 c1c430ab753b578b583574f1c9849a5a63e13985 SHA1 b29d6761d7ec4f867db9d59825c6609af5714900 SHA256 6517b23568f6a7fa0ee9ade41b0592402825cd67c0cf0e49814f62ecd59f3b32
+MISC metadata.xml 230 RMD160 fc8603f0d61fdc22114e882c16fcbd6e7a08c19c SHA1 72c259ab7452f41074b593dc6a49865f26a4b8aa SHA256 9a8b2e766f7f99f97d797f448fed1c65c72eea67696972ebff8b16420dce58b8
