@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-jabber-server/ChangeLog,v 1.18 2011/06/04 17:13:10 blueness Exp $
 
+  13 Aug 2011; <swift@gentoo.org> selinux-jabber-server-2.20110726.ebuild:
+  Use selinux-jabber instead of selinux-jabber-server
+
   04 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
   -selinux-jabber-server-2.20090730.ebuild,
   -selinux-jabber-server-2.20091215.ebuild,
